--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "@popperjs/core": "^2.10.1",
     "@types/invariant": "2.2.35",
     "@types/warning": "^3.0.0",
+    "classnames": "2.3.1",
     "dequal": "^2.0.2",
     "dom-helpers": "^5.2.0",
     "invariant": "2.2.4",
-    "solid-js": "^1.2.3",
+    "solid-js": "^1.2.5",
     "solid-transition-group": "0.0.8",
     "warning": "^4.0.3"
   }
