--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "classnames": "2.3.1",
     "dequal": "^2.0.2",
     "dom-helpers": "^5.2.0",
+    "holderjs": "2.9.9",
     "invariant": "2.2.4",
     "solid-js": "^1.2.5",
     "solid-transition-group": "0.0.8",
