--- a/packages/bootstrap/package.json
+++ b/packages/bootstrap/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "solid-bootstrap-core",
-  "version": "0.1.4",
-  "description": "Unstyled/headless components for Solid-Bootstrap",
+  "name": "solid-bootstrap",
+  "version": "0.1.1",
+  "description": "Bootstrap 5 components built with SolidJS",
   "homepage": "https://github.com/solid-libs/solid-bootstrap/tree/master#readme",
   "repository": {
     "type": "git",
@@ -19,15 +19,18 @@
     "buildpackage": "cd dist && npm pack"
   },
   "dependencies": {
-    "@popperjs/core": "^2.10.1",
+    "classnames": "2.3.1",
     "dom-helpers": "^5.2.0",
-    "solid-react-transition": "^0.1.1"
+    "solid-bootstrap-core": "^0.1.4",
+    "solid-react-transition": "0.1.1",
+    "warning": "^4.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
     "@babel/preset-typescript": "^7.15.0",
     "@rollup/plugin-babel": "5.3.0",
     "@rollup/plugin-node-resolve": "13.0.5",
+    "@types/warning": "^3.0.0",
     "babel-preset-solid": "^1.1.0",
     "rollup": "^2.52.1",
     "rollup-plugin-terser": "^7.0.2",
