--- a/packages/transition/package.json
+++ b/packages/transition/package.json
@@ -1,6 +1,6 @@
 {
   "name": "solid-react-transition",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "SolidJS port of react-transition-group",
   "homepage": "https://github.com/solid-libs/solid-bootstrap/tree/master#readme",
   "repository": {
@@ -17,8 +17,10 @@
   ],
   "sideEffects": false,
   "scripts": {
-    "build": "tsc && rollup -c",
-    "prepublishOnly": "npm run build"
+    "build": "tsc && rollup -c && node dist/prepublish.js",
+    "buildpackage": "cd dist && npm pack",
+    "prepublishOnly": "npm run build",
+    "publish": "cd dist && npm publish"
   },
   "dependencies": {},
   "devDependencies": {
