--- a/www/package.json
+++ b/www/package.json
@@ -29,6 +29,7 @@
     "lodash": "4.17.21",
     "solid-js": "^1.2.5",
     "solid-app-router": "^0.1.13",
+    "solid-bootstrap": "0.1.0",
     "warning": "^4.0.3"
   }
 }
