--- a/packages/bootstrap/package.json
+++ b/packages/bootstrap/package.json
@@ -1,6 +1,6 @@
 {
   "name": "solid-bootstrap",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Bootstrap 5 components built with SolidJS",
   "homepage": "https://github.com/solid-libs/solid-bootstrap/tree/master#readme",
   "repository": {
@@ -22,15 +22,13 @@
     "classnames": "2.3.1",
     "dom-helpers": "^5.2.0",
     "solid-bootstrap-core": "^0.1.7",
-    "solid-react-transition": "0.1.6",
-    "warning": "^4.0.3"
+    "solid-react-transition": "0.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
     "@babel/preset-typescript": "^7.15.0",
     "@rollup/plugin-babel": "5.3.0",
     "@rollup/plugin-node-resolve": "13.0.5",
-    "@types/warning": "^3.0.0",
     "babel-preset-solid": "^1.1.0",
     "rollup": "^2.52.1",
     "rollup-plugin-terser": "^7.0.2",
