Docs - remove hash routing

--- a/www/package.json
+++ b/www/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "vite",
     "dev": "vite",
-    "build": "vite build --base=/solid-bootstrap/ --emptyOutDir",
+    "build": "vite build --emptyOutDir",
     "serve": "vite preview",
     "watch": "tsc -noemit -watch"
   },
