--- a/www/package.json
+++ b/www/package.json
@@ -5,12 +5,14 @@
   "scripts": {
     "start": "vite",
     "dev": "vite",
-    "build": "vite build --emptyOutDir",
+    "build": "vite build --emptyOutDir && pnpm postbuild",
+    "postbuild": "node ./scripts/postbuild.js",
     "serve": "vite preview",
     "watch": "tsc -noemit -watch"
   },
   "license": "MIT",
   "devDependencies": {
+    "fs-extra": "10.0.0",
     "vite": "^2.5.7",
     "vite-plugin-solid": "^2.0.3",
     "typescript": "^4.5.2",
