--- a/www/package.json
+++ b/www/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vite-template-solid",
-  "version": "0.0.0",
+  "name": "solid-boostrap-docs",
+  "version": "0.1.10",
   "description": "",
   "scripts": {
     "start": "vite",
@@ -24,6 +24,6 @@
     "lodash": "4.17.21",
     "solid-js": "^1.2.5",
     "solid-app-router": "^0.1.13",
-    "solid-bootstrap": "0.1.3"
+    "solid-bootstrap": "0.1.10"
   }
 }
