--- a/packages/bootstrap/package.json
+++ b/packages/bootstrap/package.json
@@ -1,6 +1,6 @@
 {
   "name": "solid-bootstrap",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Bootstrap 5 components built with SolidJS",
   "homepage": "https://solid-libs.github.io/solid-bootstrap",
   "repository": {
@@ -28,21 +28,21 @@
   },
   "dependencies": {
     "dom-helpers": "^5.2.0",
-    "solid-bootstrap-core": "^1.0.4",
-    "solid-react-transition": "^1.0.3"
+    "solid-bootstrap-core": "^1.0.5",
+    "solid-react-transition": "^1.0.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.8",
-    "@babel/preset-typescript": "^7.15.0",
+    "@babel/core": "^7.17.5",
+    "@babel/preset-typescript": "^7.16.7",
     "@rollup/plugin-babel": "5.3.0",
-    "@rollup/plugin-node-resolve": "13.0.5",
-    "babel-preset-solid": "^1.1.0",
-    "rollup": "^2.52.1",
+    "@rollup/plugin-node-resolve": "13.1.3",
+    "babel-preset-solid": "^1.3.6",
+    "rollup": "^2.67.3",
     "rollup-plugin-terser": "^7.0.2",
-    "solid-js": "^1.2.5",
-    "typescript": "^4.5.2"
+    "solid-js": ">=1.2.5",
+    "typescript": "^4.5.5"
   },
   "peerDependencies": {
-    "solid-js": "^1.2.5"
+    "solid-js": ">=1.2.5"
   }
 }
