--- a/packages/transition/package.json
+++ b/packages/transition/package.json
@@ -1,6 +1,6 @@
 {
   "name": "solid-react-transition",
-  "version": "1.0.3",
+  "version": "1.0.5",
   "description": "SolidJS port of react-transition-group",
   "homepage": "https://github.com/solid-libs/solid-bootstrap/tree/master#readme",
   "repository": {
@@ -23,21 +23,22 @@
   "scripts": {
     "build": "tsc && rollup -c && node dist/esm/prepublish.js",
     "buildpackage": "cd dist && npm pack",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "watch": "tsc -noemit -watch"
   },
   "dependencies": {},
   "devDependencies": {
-    "@babel/core": "^7.15.8",
-    "@babel/preset-typescript": "^7.15.0",
+    "@babel/core": "^7.17.5",
+    "@babel/preset-typescript": "^7.16.7",
     "@rollup/plugin-babel": "5.3.0",
-    "@rollup/plugin-node-resolve": "13.0.5",
-    "babel-preset-solid": "^1.1.0",
-    "rollup": "^2.52.1",
+    "@rollup/plugin-node-resolve": "13.1.3",
+    "babel-preset-solid": "^1.3.6",
+    "rollup": "^2.67.3",
     "rollup-plugin-terser": "^7.0.2",
-    "solid-js": "^1.2.5",
-    "typescript": "^4.5.2"
+    "solid-js": ">=1.2.5",
+    "typescript": "^4.5.5"
   },
   "peerDependencies": {
-    "solid-js": "^1.2.5"
+    "solid-js": ">=1.2.5"
   }
 }
