--- a/www/package.json
+++ b/www/package.json
@@ -13,23 +13,23 @@
   "license": "MIT",
   "type": "module",
   "devDependencies": {
-    "@mdx-js/rollup": "^2.0.0-rc.2",
+    "@mdx-js/rollup": "2.0.0",
     "fs-extra": "10.0.0",
     "shakespeare-data": "^3.0.0",
-    "rollup": "2.63.0",
+    "rollup": "2.67.3",
     "rehype-highlight": "5.0.2",
-    "solid-mdx": "^0.0.5",
-    "typescript": "^4.5.2",
-    "vite": "^2.7.10",
-    "vite-plugin-solid": "2.2.0"
+    "solid-mdx": "^0.0.6",
+    "typescript": "^4.5.5",
+    "vite": "^2.8.4",
+    "vite-plugin-solid": "2.2.5"
   },
   "dependencies": {
     "@types/lodash": "4.14.177",
     "classnames": "2.3.1",
     "lodash": "4.17.21",
-    "solid-js": "^1.3.1",
-    "solid-app-router": "^0.2.0",
-    "solid-bootstrap": "1.0.4",
-    "solid-bootstrap-core": "1.0.4"
+    "solid-js": "^1.3.7",
+    "solid-app-router": "^0.3.0",
+    "solid-bootstrap": "1.0.5",
+    "solid-bootstrap-core": "1.0.5"
   }
 }
