Link packages via NPM workspaces
* `npm install` cross-links packages and installs all dependencies
* `npm run build` runs `build` script in all packages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,14 @@
 {
   "devDependencies": {
     "prettier": "2.5.1"
-  }
+  },
+  "scripts": {
+    "build": "npm run build --workspaces"
+  },
+  "workspaces": [
+    "packages/transition",
+    "packages/core",
+    "packages/bootstrap"
+  ]
 }
+
