--- a/packages/bootstrap/package.json
+++ b/packages/bootstrap/package.json
@@ -27,9 +27,7 @@
     "watch": "tsc -noemit -watch"
   },
   "dependencies": {
-    "dom-helpers": "^5.2.0",
-    "solid-bootstrap-core": "^1.0.6",
-    "solid-react-transition": "^1.0.5"
+    "dom-helpers": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
