--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -28,8 +28,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.10.1",
-    "dom-helpers": "^5.2.0",
-    "solid-react-transition": "^1.0.5"
+    "dom-helpers": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
