--- a/packages/bootstrap/package.json
+++ b/packages/bootstrap/package.json
@@ -14,9 +14,9 @@
   "types": "dist/esm/index.d.ts",
   "exports": {
     ".": {
-      "types": "./esm/index.d.ts",
-      "solid": "./esm/index.jsx",
-      "default": "./esm/index.js"
+      "types": "./dist/esm/index.d.ts",
+      "solid": "./dist/esm/index.jsx",
+      "default": "./dist/esm/index.js"
     }
   },
   "sideEffects": false,
@@ -27,7 +27,9 @@
     "watch": "tsc -noemit -watch"
   },
   "dependencies": {
-    "dom-helpers": "^5.2.0"
+    "dom-helpers": "^5.2.0",
+    "solid-bootstrap-core": "^1.0.6",
+    "solid-react-transition": "^1.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
