--- a/www/package.json
+++ b/www/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "vite",
     "dev": "vite",
-    "build": "vite build --emptyOutDir && pnpm postbuild",
+    "build:docs": "vite build --emptyOutDir && npm postbuild",
     "postbuild": "node ./scripts/postbuild.js",
     "serve": "vite preview",
     "watch": "tsc -noemit -watch"
@@ -13,23 +13,21 @@
   "license": "MIT",
   "type": "module",
   "devDependencies": {
-    "@mdx-js/rollup": "2.0.0",
+    "@mdx-js/rollup": "2.1.1",
     "fs-extra": "10.0.0",
     "shakespeare-data": "^3.0.0",
-    "rollup": "2.69.1",
+    "rollup": "2.70.2",
     "rehype-highlight": "5.0.2",
     "solid-mdx": "^0.0.6",
     "typescript": "^4.5.5",
-    "vite": "^2.8.6",
-    "vite-plugin-solid": "2.2.5"
+    "vite": "^2.9.6",
+    "vite-plugin-solid": "2.2.6"
   },
   "dependencies": {
     "@types/lodash": "4.14.177",
     "classnames": "2.3.1",
     "lodash": "4.17.21",
-    "solid-js": "^1.3.10",
-    "solid-app-router": "^0.3.0",
-    "solid-bootstrap": "1.0.7",
-    "solid-bootstrap-core": "1.0.6"
+    "solid-js": "^1.3.17",
+    "solid-app-router": "^0.3.2"
   }
 }
