--- a/www/package.json
+++ b/www/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "solid-boostrap-docs",
+  "name": "solid-bootstrap-docs",
   "version": "1.0.6",
   "description": "",
   "scripts": {
     "start": "vite",
     "dev": "vite",
-    "build:docs": "vite build --emptyOutDir && npm postbuild",
+    "build": "vite build --emptyOutDir",
+    "deploy": "npm run build && gh-pages -d dist",
     "postbuild": "node ./scripts/postbuild.js",
     "serve": "vite preview",
     "watch": "tsc -noemit -watch"
@@ -15,9 +16,10 @@
   "devDependencies": {
     "@mdx-js/rollup": "2.1.1",
     "fs-extra": "10.0.0",
-    "shakespeare-data": "^3.0.0",
-    "rollup": "2.70.2",
+    "gh-pages": "^3.2.3",
     "rehype-highlight": "5.0.2",
+    "rollup": "2.70.2",
+    "shakespeare-data": "^3.0.0",
     "solid-mdx": "^0.0.6",
     "typescript": "^4.5.5",
     "vite": "^2.9.6",
@@ -27,7 +29,7 @@
     "@types/lodash": "4.14.177",
     "classnames": "2.3.1",
     "lodash": "4.17.21",
-    "solid-js": "^1.3.17",
-    "solid-app-router": "^0.3.2"
+    "solid-app-router": "^0.3.2",
+    "solid-js": "^1.3.17"
   }
 }
