Fix: production docs build included Solid twice

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "workspaces": [
     "packages/transition",
     "packages/core",
-    "packages/bootstrap"
+    "packages/bootstrap",
+    "www"
   ]
 }
